testing helm docker login

--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -62,11 +62,10 @@ jobs:
           -w /work \
           -e REGISTRY_USERNAME=${{ secrets.ECMWF_DOCKER_REGISTRY_USERNAME }} \
           -e REGISTRY_PASSWORD=${{ secrets.ECMWF_DOCKER_REGISTRY_ACCESS_TOKEN }} \
-          alpine/helm:latest \
-          -c "echo \$REGISTRY_PASSWORD | echo \$REGISTRY_USERNAME; echo \$REGISTRY_PASSWORD; helm registry login https://eccr.ecmwf.int --username \$REGISTRY_USERNAME --password-stdin"
-
+          alpine/helm \
+          -c "echo \$REGISTRY_PASSWORD | helm registry login eccr.ecmwf.int --username \$REGISTRY_USERNAME --password-stdin"
 
       - name: cleanup
         shell: bash
-        run: | 
+        run: |
           rm -rf ${{ steps.set_vars.outputs.output-folder }}
