testing git version

--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -20,6 +20,7 @@ jobs:
   building-helm-chart:
     runs-on:
       - ubuntu-latest
+    using: "composite"
     steps:
 
       - name: Checkout chart-repo
