--- a/.github/actions/git-version.yml
+++ b/.github/actions/git-version.yml
@@ -19,7 +19,7 @@ runs:
   using: "composite"
   steps:
     - name: setup dotnet
-      uses: setup-dotnet@v4
+      uses: actions/setup-dotnet@v4
       env:
         DOTNET_INSTALL_DIR: "~/.dotnet"
       with:
