--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -30,7 +30,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Checkout cads-build-farm (full)
+      - name: Checkout cads-build-farm
         uses: actions/checkout@v4
         with:
           repository: ecmwf-projects/cads-build-farm
@@ -44,12 +44,17 @@ jobs:
         uses: ecmwf-projects/cads-build-farm/.github/actions/git-version@helm-chart-pipeline
         id: version
 
+      - name: Debug registry secrets
+        run: |
+          echo "USERNAME is set? -> ${{ secrets.ECMWF_DOCKER_REGISTRY_USERNAME != '' }}"
+          echo "PASSWORD is set? -> ${{ secrets.ECMWF_DOCKER_REGISTRY_ACCESS_TOKEN != '' }}"
+
       - name: Login to harbor registry
         uses: docker/login-action@v2
         with:
-          registry: '${{ secrets.HARBOR_IP }}'
-          username: '${{ secrets.HARBOR_USER }}'
-          password: '${{ secrets.HARBOR_TOKEN }}'
+          registry: https://eccr.ecmwf.int
+          username: ${{ env.registryUsername }}
+          password: ${{ env.registryPassword }}
 
 
       - uses: ecmwf-projects/cads-build-farm/.github/actions/image-variables@helm-chart-pipeline
