--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -53,8 +53,8 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: https://eccr.ecmwf.int
-          username: ${{ env.registryUsername }}
-          password: ${{ env.registryPassword }}
+          username: ${{ secrets.ECMWF_DOCKER_REGISTRY_USERNAME }}
+          password: ${{ secrets.ECMWF_DOCKER_REGISTRY_ACCESS_TOKEN }}
 
 
       - uses: ecmwf-projects/cads-build-farm/.github/actions/image-variables@helm-chart-pipeline
