--- a/.github/actions/docker-build/action.yaml
+++ b/.github/actions/docker-build/action.yaml
@@ -15,6 +15,10 @@ inputs:
     required: true
   registry:
     required: true
+  image-name:
+    required: true
+  version:
+    required: true
 
 
 
