--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -39,13 +39,6 @@ jobs:
         uses: ecmwf-projects/cads-build-farm/.github/actions/git-version@helm-chart-pipeline
         id: version
 
-      - name: Debug registry secrets
-        run: |
-          echo "HARBOR_USER is set? -> ${{ secrets.HARBOR_USER != '' }}"
-          echo "HARBOR_TOKEN is set? -> ${{ secrets.HARBOR_TOKEN != '' }}"
-
-
-
 
       - name: Login to harbor registry
         uses: docker/login-action@v2
@@ -57,7 +50,11 @@ jobs:
 
       - uses: ecmwf-projects/cads-build-farm/.github/actions/image-variables@helm-chart-pipeline
         id: image-variables
-
+      - name: Debug image variables
+        run: |
+          echo "build-image-name: ${{ steps.image-variables.outputs.build-image-name }}"
+          echo "image-name: ${{ steps.image-variables.outputs.image-name }}"
+          echoi "version ${{ steps.version.outputs.version }}"
       - name: Dockerfile build tag and push
         uses: ecmwf-projects/cads-build-farm/.github/actions/docker-build@helm-chart-pipeline
         with:
