--- a/.github/actions/update-chart/action.yaml
+++ b/.github/actions/update-chart/action.yaml
@@ -8,7 +8,9 @@ inputs:
   app-version:
     description: "New appVersion to set"
     required: true
-
+  helm-pat:
+    description: "PAT token to access the repo"
+    required: true
 
 runs:
   using: "composite"
@@ -17,7 +19,7 @@ runs:
       uses: actions/checkout@v4
       with:
         repository: ${{ inputs.chart-repo }}
-        token: ${{ secrets.DSS_HELM_PAT }}
+        token: ${{ inputs.helm-pat }}
         ref: main
 
     - name: Check for existing branch
@@ -57,7 +59,7 @@ runs:
       run: |
         response=$(curl -s -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          -H "Authorization: Bearer ${{ secrets.DSS_HELM_PAT }}" \
+          -H "Authorization: Bearer ${{ inputs.helm-pat }}" \
           https://api.github.com/repos/${{ inputs.chart-repo }}/pulls)
 
         pr_number=$(echo "$response" | docker run --rm -i imega/jq '.[] | select(.head.ref=="automatic_update" and .base.ref=="main") | .number')
@@ -67,7 +69,7 @@ runs:
           curl -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Authorization: Bearer ${{ secrets.DSS_HELM_PAT }}" \
+            -H "Authorization: Bearer ${{ inputs.helm-pat }}" \
             https://api.github.com/repos/${{ inputs.chart-repo }}/pulls \
             -d '{
               "title": "Update appVersion",
@@ -80,7 +82,7 @@ runs:
           curl -X PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Authorization: Bearer ${{ secrets.DSS_HELM_PAT }}" \
+            -H "Authorization: Bearer ${{ inputs.helm-pat }}" \
             https://api.github.com/repos/${{ inputs.chart-repo }}/pulls/$pr_number \
             -d '{
               "body": "This PR updates the appVersion to '${{ inputs.app-version }}'."
