--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -101,3 +101,4 @@ jobs:
           helm-pat: ${{ secrets.DSS_HELM_PAT }}
           enviromentMode: ${{ steps.version.outputs.enviromentMode }}
           package-ref: ${{ inputs.package-ref }}
+          version: ${{ steps.version.outputs.version }}
