--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -14,7 +14,7 @@ on:
         required: true
         type: string
       repositories:
-        required: true
+        required: false
         type: string
       package-ref:
         required: true
