adding package ref logic

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -17,7 +17,7 @@ on:
         required: false
         type: string
       package-ref:
-        required: true
+        required: false
         type: string
     secrets:
       HARBOR_USER:
