--- a/.github/actions/update-package/action.yaml
+++ b/.github/actions/update-package/action.yaml
@@ -43,7 +43,7 @@ runs:
           git checkout -b automatic_package_update
         fi
 
-        sed -i -r "s|^${{ inputs.package-ref }}=.*$|${{ inputs.package-ref }}=\"${{ inputs.version }}\"|" enviroment.$ENVIRONMENT_MODE
+        sed -i -r "s|^${{ inputs.package-ref }}=.*$|${{ inputs.package-ref }}=\"${{ inputs.version }}\"|" environment.$ENVIRONMENT_MODE
 
         git config user.email "${{ github.repository_owner }}@bopen.com"
         git config user.name "${{ github.repository_owner }}"
